test/static/bad/cycle-length-three.exp
File "cycle-length-three.mly", line 7, characters 0-1:
File "cycle-length-three.mly", line 11, characters 0-1:
File "cycle-length-three.mly", line 15, characters 0-1:
Error: the grammar is cyclic:
the nonterminal symbol a expands to itself.
a expands to b,
which expands to c,
which expands to a.
A cyclic grammar is ambiguous.
